--- a/src/app/presentation/account/auth/login/login.component.html
+++ b/src/app/presentation/account/auth/login/login.component.html
@@ -34,7 +34,7 @@
 
                 <div class="mb-3">
                   <label for="email">User</label>
-                  <input type="text" formControlName="userName" class="form-control"/>
+                  <input type="text" formControlName="email" class="form-control"/>
                 </div>
 
                 <div class="mb-3">
