--- a/src/app/presentation/pages/parametrization/users/users.component.html
+++ b/src/app/presentation/pages/parametrization/users/users.component.html
@@ -66,11 +66,11 @@
               Lista de Usuarios
             </h4>
             <div class="flex-shrink-0 d-flex gap-1">
-              <!-- <button type="menu" class="btn btn-primary" (click)="openScheduleModal()">
+              <!-- <button type="menu" class="btn btn-primary" (click)="openUserModal()">
                 <i class="mdi mdi-plus mr-1"></i>
                 Nuevo Usuario
               </button> -->
-              <button type="menu" class="btn btn-primary">
+              <button type="menu" class="btn btn-primary" (click)="openUserModal()">
                 <i class="mdi mdi-plus mr-1"></i>
                 Nuevo Usuario
               </button>
@@ -92,7 +92,6 @@
                 <tr>
                   <th scope="col">Correo</th>
                   <th scope="col">Nombre</th>
-                  <th scope="col">Apellido</th>
                   <th scope="col">Activo</th>
                   <th scope="col" class="align-middle text-center" style="width: 10%;">
                     Acciones
