--- a/src/app/presentation/account/auth/login/login.component.html
+++ b/src/app/presentation/account/auth/login/login.component.html
@@ -3,7 +3,7 @@
     <div class="row justify-content-center">
       <div class="col-md-8 col-lg-6 col-xl-5">
         <div class="card overflow-hidden">
-          <div class="bg-primary-subtle">
+          <!-- <div class="bg-primary-subtle">
             <div class="row">
               <div class="col-7">
                 <div class="text-primary p-4">
@@ -15,16 +15,19 @@
                 <img src="assets/images/profile-img.png" alt="" class="img-fluid">
               </div>
             </div>
-          </div>
+          </div> -->
           <div class="card-body pt-0">
             <div>
-              <a routerLink="/">
+              <span class="logo-login d-flex justify-content-center">
+                    <img src="assets/images/logo-cermi.png" alt="">
+                  </span>
+              <!-- <a routerLink="/">
                 <div class="avatar-md profile-user-wid mb-4">
                   <span class="avatar-title rounded-circle bg-light">
                     <img src="assets/images/logo.svg" alt="" class="rounded-circle" height="34">
                   </span>
                 </div>
-              </a>
+              </a> -->
             </div>
             <div class="p-2">
               <form class="form-horizontal" [formGroup]="loginForm" (ngSubmit)="onSubmit()">
@@ -33,12 +36,12 @@
                 }
 
                 <div class="mb-3">
-                  <label for="email">User</label>
+                  <label for="email">Correo</label>
                   <input type="text" formControlName="email" class="form-control"/>
                 </div>
 
                 <div class="mb-3">
-                  <label for="email">Password</label>
+                  <label for="email">Contraseña</label>
                   <input type="text" formControlName="password" class="form-control"/>
                 </div>
 
@@ -56,7 +59,7 @@
                 <div class="form-check">
                   <input class="form-check-input" type="checkbox" id="remember-check">
                   <label class="form-check-label" for="remember-check">
-                    Remember me
+                    Recuerdame
                   </label>
                 </div>
 
@@ -67,10 +70,10 @@
                 </div>
 
                 <div class="mt-3 d-grid">
-                  <button class="btn btn-primary" type="submit">Log In</button>
+                  <button class="btn btn-primary" type="submit">Iniciar Sesión</button>
                 </div>
                 <div class="mt-4 text-center">
-                  <h5 class="font-size-14 mb-3">Sign in with</h5>
+                  <h5 class="font-size-14 mb-3">Iniciar sesión con</h5>
 
                   <ul class="list-inline">
                     <li class="list-inline-item">
