--- a/src/app/layouts/topbar/topbar.component.html
+++ b/src/app/layouts/topbar/topbar.component.html
@@ -27,14 +27,14 @@
       </button>
 
       <!-- App Search-->
-      <form class="app-search d-none d-lg-block">
+     <!--  <form class="app-search d-none d-lg-block">
         <div class="position-relative">
           <input type="text" class="form-control" placeholder="{{'HEADER.SEARCH' | translate}}">
           <span class="bx bx-search-alt"></span>
         </div>
-      </form>
+      </form> -->
 
-      <div class="dropdown-mega d-none d-lg-block ms-2" dropdown>
+      <!-- <div class="dropdown-mega d-none d-lg-block ms-2" dropdown>
         <button type="button" class="btn header-item" dropdownToggle data-toggle="dropdown" aria-haspopup="false" aria-expanded="false">
           {{ 'HEADER.MEGA_MENU' | translate}}
           <i class="mdi mdi-chevron-down"></i>
@@ -162,11 +162,11 @@
             </div>
           </div>
         </div>
-      </div>
+      </div> -->
     </div>
 
     <div class="d-flex">
-      <div class="dropdown d-inline-block d-lg-none ms-2" dropdown>
+      <!-- <div class="dropdown d-inline-block d-lg-none ms-2" dropdown>
         <button type="button" class="btn header-item noti-icon" id="page-header-search-dropdown" data-toggle="dropdown" aria-haspopup="true" dropdownToggle aria-expanded="false">
           <i class="mdi mdi-magnify"></i>
         </button>
@@ -182,9 +182,9 @@
             </div>
           </form>
         </div>
-      </div>
+      </div> -->
 
-      <div class="dropdown d-inline-block" dropdown>
+     <!--  <div class="dropdown d-inline-block" dropdown>
         <button type="button" class="btn header-item" id="page-header-user-dropdown" dropdownToggle>
           @if(flagvalue === undefined){
           <img src="{{valueset}}" alt="Header Language" height="16">
@@ -193,17 +193,15 @@
           }
         </button>
         <div class="dropdown-menu dropdown-menu-end" *dropdownMenu>
-          <!-- item-->
           @for (item of listLang; track $index) {
           <a href="javascript:void(0);" class="dropdown-item notify-item" (click)="setLanguage(item.text, item.lang, item.flag)" [ngClass]="{'active': cookieValue === item.lang}">
             <img src="{{item.flag}}" alt="user-image" class="me-1" height="12"> <span class="align-middle">{{item.text}}</span>
           </a>
           }
-          <!-- item-->
         </div>
-      </div>
+      </div> -->
 
-      <div class="dropdown d-none d-lg-inline-block ms-1" dropdown>
+      <!-- <div class="dropdown d-none d-lg-inline-block ms-1" dropdown>
         <button type="button" class="btn header-item noti-icon" dropdownToggle>
           <i class="bx bx-customize"></i>
         </button>
@@ -252,7 +250,7 @@
             </div>
           </div>
         </div>
-      </div>
+      </div> -->
 
       <div class="dropdown d-none d-lg-inline-block ms-1">
         <button type="button" class="btn header-item noti-icon waves-effect" data-bs-toggle="fullscreen" (click)="fullscreen()">
@@ -260,7 +258,7 @@
         </button>
       </div>
 
-      <div class="dropdown d-inline-block" dropdown>
+      <!-- <div class="dropdown d-inline-block" dropdown>
         <button type="button" class="btn header-item noti-icon" id="page-header-notifications-dropdown" dropdownToggle>
           <i class="bx bx-bell bx-tada"></i>
           <span class="badge bg-danger rounded-pill">3</span>
@@ -345,7 +343,7 @@
             </a>
           </div>
         </div>
-      </div>
+      </div> -->
 
       <div class="dropdown d-inline-block" dropdown>
         <button type="button" class="btn header-item" dropdownToggle id="page-header-user-dropdown">
@@ -355,24 +353,27 @@
         </button>
         <div class="dropdown-menu dropdown-menu-end" *dropdownMenu>
           <!-- item-->
-          <a class="dropdown-item" routerLink="/contacts/profile"><i class="bx bx-user font-size-16 align-middle me-1"></i>
+         <!--  <a class="dropdown-item" routerLink="/contacts/profile"><i class="bx bx-user font-size-16 align-middle me-1"></i>
             {{ 'HEADER.LOGIN.PROFILE' | translate}}</a>
           <a class="dropdown-item" routerLink="/crypto/wallet" href="javascript: void(0);"><i class="bx bx-wallet font-size-16 align-middle me-1"></i>{{ 'HEADER.LOGIN.MY_WALLET' | translate}}</a>
           <a class="dropdown-item d-block" href="javascript: void(0);"><span class="badge bg-success float-end">11</span><i class="bx bx-wrench font-size-16 align-middle me-1"></i>{{
-            'HEADER.LOGIN.SETTINGS' | translate}} </a>
+            'HEADER.LOGIN.SETTINGS' | translate}} 
+          </a>
           <a class="dropdown-item" routerLink="/pages/lock-screen-1"><i class="bx bx-lock-open font-size-16 align-middle me-1"></i>
-            {{ 'HEADER.LOGIN.LOCK_SCREEN' | translate}}</a>
+            {{ 'HEADER.LOGIN.LOCK_SCREEN' | translate}}
+          </a> -->
           <div class="dropdown-divider"></div>
           <a class="dropdown-item text-danger" href="javascript: void(0);" (click)="logout()"><i class="bx bx-power-off font-size-16 align-middle me-1 text-danger"></i>
-            {{ 'HEADER.LOGIN.LOGOUT' | translate}}</a>
+            {{ 'HEADER.LOGIN.LOGOUT' | translate}}
+          </a>
         </div>
       </div>
 
-      <div class="dropdown d-inline-block">
+      <!-- <div class="dropdown d-inline-block">
         <button type="button" class="btn header-item noti-icon right-bar-toggle" (click)="toggleRightSidebar()">
           <i class="bx bx-cog bx-spin"></i>
         </button>
-      </div>
+      </div> -->
 
     </div>
   </div>
