estilos formulario de pacientes

--- a/src/app/layouts/topbar/topbar.component.html
+++ b/src/app/layouts/topbar/topbar.component.html
@@ -184,7 +184,7 @@
         </div>
       </div> -->
 
-     <div class="dropdown d-inline-block" dropdown>
+     <!-- <div class="dropdown d-inline-block" dropdown>
         <button type="button" class="btn header-item" id="page-header-user-dropdown" dropdownToggle>
           @if(flagvalue === undefined){
           <img src="{{valueset}}" alt="Header Language" height="16">
@@ -199,7 +199,7 @@
           </a>
           }
         </div>
-      </div> 
+      </div>  -->
 
       <!-- <div class="dropdown d-none d-lg-inline-block ms-1" dropdown>
         <button type="button" class="btn header-item noti-icon" dropdownToggle>
